/*
 * The MIT License
 * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
 * Copyright (c) 2018 Estonian Information System Authority (RIA),
 * Nordic Institute for Interoperability Solutions (NIIS), Population Register Centre (VRK)
 * Copyright (c) 2015-2017 Estonian Information System Authority (RIA), Population Register Centre (VRK)
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */
syntax = "proto3";

package org.niis.xroad.messagelog.archiver.proto;

option java_multiple_files = true;

service MessageLogArchiverService {
  rpc triggerArchival(MessageLogArchivalRequest) returns (MessageLogArchivalResp) {}
  rpc triggerCleanup(MessageLogCleanupRequest) returns (MessageLogCleanupResp) {}
}

// Common message log configuration
message MessageLogConfig {
  bool archive_encryption_enabled = 1;
  optional string archive_encryption_default_key_id = 2;
  string archive_grouping_strategy = 3;
  map<string, StringList> archive_grouping = 4;
  int32 clean_transaction_batch_size = 5;
  int32 clean_keep_records_for = 6;
  int32 archive_transaction_batch_size = 7;
  string archive_path = 8;
  optional string archive_transfer_command = 9;
  string grouping_strategy = 10;
  string digest_algorithm = 11;
  int64 archive_max_filesize = 12;
  string tmp_dir = 13;
  bool database_encryption_enabled = 14;
  optional string database_encryption_key_id = 15;
}

// Message log archive configuration request
message MessageLogArchivalRequest {
  MessageLogConfig message_log_config = 1;
}

// Message log cleanup request
message MessageLogCleanupRequest {
  MessageLogConfig message_log_config = 1;
}

message StringList {
  repeated string values = 1;
}

// Response for archival operations
message MessageLogArchivalResp {
  bool success = 1;
  optional string message = 2;
}

// Response for cleanup operations
message MessageLogCleanupResp {
  bool success = 1;
  optional string message = 2;
  int64 records_removed = 3;
}

